--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,16 +6,18 @@
 
 :root {
     --clr-primary: hsl(233, 26%, 24%);
-    --clr-secondary: hsl(136, 65%, 51%);
-    --clr-accent: hsl(192, 70%, 51%);
-    --bg1: hsl(233, 8%, 62%);
-    --bg2: hsl(220, 16%, 96%);
-    --bg3: hsl(0, 0%, 98%);
-    --bg4: hsl(0, 0%, 100%);
+    --clr-secondary: hsl(233, 8%, 62%);
+    --clr-accent-green: hsl(136, 65%, 51%);
+    --clr-accent-blue: hsl(192, 70%, 51%);
+    --bg-nav: hsl(0, 0%, 100%);
+    --bg-darkgrey: hsl(220, 16%, 96%);
+    --bg-grey: hsl(0, 0%, 98%);
+    
 }
 
 html {
     font-size: 18px;
+    font-family: 'Public Sans', sans-serif;
 }
 
 a {
@@ -30,6 +32,7 @@ nav {
     align-items: center;
     padding: .7rem;
     position: relative;
+    background-color: var(--bg-nav);
 }
 
 .logo img {
@@ -38,6 +41,9 @@ nav {
 
 #main-nav {
     list-style-type: none;
+}
+
+#main-nav {
     opacity: 0;
     position: absolute;
     width: 100%;
@@ -56,18 +62,18 @@ nav {
     opacity: 1;
 }
 
-#main-nav.mobile li {
-    background-color: var(--bg4);
+#main-nav li {
+    background-color: var(--bg-nav);
     text-align: center;
     padding-bottom: .5rem;
 }
 
-#main-nav.mobile li:first-of-type {
+#main-nav li:first-of-type {
     border-radius: 4px 4px 0 0;
     padding-top: 1rem;
 }
 
-#main-nav.mobile li:last-of-type {
+#main-nav li:last-of-type {
     border-radius: 0 0 4px 4px;
     padding-bottom: 1rem;
 }
@@ -79,9 +85,9 @@ nav {
 }
 
 button {
-    color: var(--bg4);
-    background: linear-gradient(to right, var(--clr-secondary), var(--clr-accent));
-    padding: .7rem 0;
+    color: var(--bg-nav);
+    background: linear-gradient(to right, var(--clr-accent-green), var(--clr-accent-blue));
+    padding: .8rem 0;
     width: 50%;
     border-radius: 10rem;
     border: none;
@@ -89,11 +95,19 @@ button {
     margin: .5rem auto;
 }
 
+button:hover {
+    cursor: pointer;
+background: linear-gradient(to right, hsl(136, 82%, 69%), hsl(192, 78%, 70%));
+}
+
 nav button {
     display: none;
 }
 
-.overview, .services, .latest-articles, footer {
+.overview,
+.services,
+.latest-articles,
+footer {
     width: 100%;
     padding: 13% 7%;
 }
@@ -102,7 +116,7 @@ nav button {
     padding-bottom: 18%;
     display: flex;
     flex-flow: column wrap;
-    background-color: var(--bg3);
+    background-color: var(--bg-grey);
     position: relative;
     text-align: center;
 }
@@ -112,7 +126,7 @@ nav button {
     padding: 7.5rem 0;
     position: absolute;
     width: 100%;
-    left: 0;
+    right: 0;
     top: 0;
 }
 
@@ -120,30 +134,34 @@ nav button {
     margin-top: 14rem;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     font-weight: 400;
     color: var(--clr-primary);
 }
 
 .summary h1 {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
 }
 
 .summary p {
-    color: var(--bg1);
+    color: var(--clr-secondary);
     line-height: 1.6;
-    font-size: .9rem;
+    font-size: .8rem;
     text-align: center;
     padding: 1rem 0;
 }
 
 .services {
-    background-color: var(--bg2);
-    color: var(--bg1);
+    background-color: var(--bg-darkgrey);
+    color: var(--clr-secondary);
     text-align: center;
+    line-height: 1.6;
 }
 
-.services > div:first-child {
+.services>div:first-child {
     padding-bottom: 1rem;
 }
 
@@ -151,7 +169,13 @@ h1, h2, h3, h4 {
     font-size: 2rem;
 }
 
-.services div p, .service-cards, .cards {
+.services >div:first-child p {
+    font-size: .9rem;
+}
+
+.services div p,
+.service-cards,
+.cards {
     padding: 1rem 0;
 }
 
@@ -166,9 +190,13 @@ h1, h2, h3, h4 {
     margin: 0 auto;
 }
 
+.services p {
+    font-size: .8rem;
+}
+
 .latest-articles {
     text-align: center;
-    background-color: var(--bg3);
+    background-color: var(--bg-grey);
 }
 
 .latest-articles h2 {
@@ -177,7 +205,7 @@ h1, h2, h3, h4 {
 }
 
 .article {
-    background-color: var(--bg4);
+    background-color: var(--bg-nav);
     margin: 1.5rem 0;
     border-radius: 0 0 6px 6px;
 }
@@ -192,10 +220,10 @@ h1, h2, h3, h4 {
 }
 
 .article-content {
-    font-size: .9rem;
-    padding: 1.5em 2em; 
+    font-size: .7rem;
+    padding: 1.5em 2em;
     text-align: left;
-    color: var(--bg1);
+    color: var(--clr-secondary);
 }
 
 .author {
@@ -208,16 +236,22 @@ h1, h2, h3, h4 {
     padding: .5em 0;
 }
 
+.headline:hover {
+    cursor: pointer;
+    color: var(--clr-accent-green);
+}
+
 .preview {
     padding-bottom: 2rem;
+    font-size: .8rem;
 }
 
 footer {
     background-color: var(--clr-primary);
-    color: var(--bg4);
+    color: var(--bg-nav);
 }
 
-footer > div {
+footer>div {
     width: 70%;
     margin: 0 auto;
     text-align: center;
@@ -229,24 +263,32 @@ footer > div {
     padding: 1rem 1rem 1rem;
 }
 
+.socials div:hover {
+    cursor: pointer;
+}
+
+/* change fill color of svg when div is hovered on */
+.socials div:hover svg path {
+    fill: var(--clr-accent-green);
+}
+
 #footer-nav ul {
     width: 100%;
 }
 
 #footer-nav li {
-    /* background-color: #fff; */
     list-style-type: none;
     text-align: center;
     padding: .5rem;
     font-weight: 300;
 }
 
-#footer-nav a {
-    color: white;
+#footer-nav li a:hover {
+    color: var(--clr-accent-green);
 }
 
-#footer-nav a:hover {
-    text-decoration: underline;
+#footer-nav a {
+    color: var(--bg-darkgrey);
 }
 
 footer button {
@@ -256,8 +298,8 @@ footer button {
 
 .copyright {
     padding-top: .5rem;
-    font-size: .8rem;
-    color: var(--bg1);
+    font-size: .7rem;
+    color: var(--clr-secondary);
 }
 
 .attribution {
@@ -265,14 +307,226 @@ footer button {
     text-align: center;
     padding: 1rem;
     font-weight: 300;
-  }
+}
 
-  .attribution a {
+.attribution a {
     color: hsl(228, 45%, 44%);
     font-size: 13px;
-  }
+    font-weight: 400;
+}
 
-  .attribution a:hover {
-      text-decoration: underline;
-      font-weight: 400;
-  }
+.attribution a:hover {
+    text-decoration: underline;
+    color: hsl(228, 59%, 28%);
+}
+
+@media screen and (min-width: 1000px) {
+    nav {
+        width: 85%;
+        margin: 0 auto;
+        justify-content: space-around;
+        padding: 0;
+    }
+
+    #main-nav {
+        opacity: 1;
+        position: static;
+        width: 61%;
+        background: var(--bg-nav);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: inherit;
+        padding-bottom: 0;
+    }
+
+    #main-nav li:first-of-type,
+    #main-nav li:last-of-type {
+        padding: 0;
+        padding-bottom: 0;
+    }
+
+    #main-nav li {
+        border-radius: 0;
+        padding-bottom: 0;
+        margin-right: 1rem;
+    }
+
+    #main-nav li a {
+        color: var(--clr-secondary);
+        border-bottom: 5px solid transparent;
+        padding-bottom: 1.2rem;
+    }
+
+    #main-nav li a:hover {
+        border-bottom: 5px solid var(--clr-accent-green);
+        color: var(--clr-primary);
+    }
+
+    .nav-btn {
+        display: none;
+    }
+
+    nav button {
+        display: block;
+        width: 8.5rem;
+        margin: 0;
+    }
+
+    .overview,
+    .services,
+    .latest-articles,
+    footer {
+        width: 100%;
+        padding: 5% 10%;
+        text-align: left;
+    }
+
+    .overview {
+        flex-flow: row nowrap;
+        padding-top: 0;
+        padding-bottom: 8.6rem;
+    }
+
+    .overview-image {
+        order: 2;
+        padding: 0;
+        height: 740px;
+        width: 58%;
+        background: url(../images/image-mockups.png) 215px -120px / 88% no-repeat, url(../images/bg-intro-desktop.svg) 30px -230px / 1116px no-repeat;
+    }
+
+    .summary {
+        margin-top: 8.8rem;
+        width: 43%;
+        text-align: left;
+    }
+
+    .summary h1 {
+        font-size: 3.1rem;
+    }
+
+    .summary p {
+        text-align: left;
+        font-size: 1rem;
+    }
+
+    .summary button {
+        margin: 0;
+        width: 9rem;
+    }
+
+    .services {
+        padding-top: 7%;
+    }
+
+    .services>div:first-child {
+        width: 60%;
+    }
+
+    .services h2, 
+    .latest-articles h2 {
+        font-size: 2.5rem;
+    }
+
+    .service-cards {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1.5rem;
+    }
+
+    .icon img {
+        width: 25%;
+        margin: 0;
+    }
+
+    .service-cards h3 {
+        font-size: 1.4rem;
+    }
+
+    .latest-articles h2 {
+        padding-top: 1rem;
+    }
+
+    .all-articles {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1.5rem;
+    }
+
+    .headline {
+        font-size: 1rem;
+    }
+
+    .preview {
+        padding-bottom: .3rem;
+    }
+
+    footer>div {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr 2fr;
+        grid-template-areas:
+            "logo     footer-nav . button"
+            ".        footer-nav . ."
+            "socials  footer-nav . copyright";
+        column-gap: 4.5rem;
+        text-align: left;
+    }
+
+    .logo {
+        grid-area: logo;
+    }
+
+    .socials {
+        grid-area: socials;
+        padding: 0;
+        justify-content: flex-start;
+    }
+
+    .socials div {
+        margin-right: .6rem;
+    }
+
+    #footer-nav {
+        grid-area: footer-nav;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem 5rem;
+    }
+
+    #footer-nav li {
+        text-align: left;
+        padding: 0;
+    }
+
+    .first-column {
+        grid-column: 1/2;
+    }
+
+    .second-column {
+        grid-column: 2/3;
+    }
+
+    .second-column:nth-of-type(4) {
+        grid-row: 1/2;
+    }
+
+    .second-column:nth-of-type(5) {
+        grid-row: 2/3;
+    }
+
+    footer button {
+        width: 65%;
+        grid-area: button;
+        margin: 0 0 1rem auto;
+    }
+
+    .copyright {
+        grid-area: copyright;
+        text-align: right;
+    }
+
+
+
+}
