finalized UI and UX design

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,7 +12,6 @@
     --bg-nav: hsl(0, 0%, 100%);
     --bg-darkgrey: hsl(220, 16%, 96%);
     --bg-grey: hsl(0, 0%, 98%);
-    
 }
 
 html {
@@ -84,6 +83,10 @@ nav {
     padding: 0.5rem;
 }
 
+.menu-btn {
+    margin-right: 1rem;
+}
+
 button {
     color: var(--bg-nav);
     background: linear-gradient(to right, var(--clr-accent-green), var(--clr-accent-blue));
@@ -93,11 +96,18 @@ button {
     border: none;
     display: block;
     margin: .5rem auto;
+    font-weight: 400;
+    transition: box-shadow 0.2s ease-in-out;
 }
 
 button:hover {
     cursor: pointer;
-background: linear-gradient(to right, hsl(136, 82%, 69%), hsl(192, 78%, 70%));
+    background: linear-gradient(to right, hsl(136, 82%, 69%), hsl(192, 78%, 70%));
+}
+
+button:focus {
+    outline: none;
+    box-shadow: 0 4px 7.5px hsla(233, 26%, 24%, 0.3);
 }
 
 nav button {
@@ -110,6 +120,7 @@ nav button {
 footer {
     width: 100%;
     padding: 13% 7%;
+    text-align: center;
 }
 
 .overview {
@@ -118,7 +129,6 @@ footer {
     flex-flow: column wrap;
     background-color: var(--bg-grey);
     position: relative;
-    text-align: center;
 }
 
 .overview-image {
@@ -150,14 +160,12 @@ h4 {
     color: var(--clr-secondary);
     line-height: 1.6;
     font-size: .8rem;
-    text-align: center;
     padding: 1rem 0;
 }
 
 .services {
     background-color: var(--bg-darkgrey);
     color: var(--clr-secondary);
-    text-align: center;
     line-height: 1.6;
 }
 
@@ -169,19 +177,16 @@ h4 {
     font-size: 2rem;
 }
 
-.services >div:first-child p {
-    font-size: .9rem;
+.services>div:first-child p {
+    font-size: 1rem;
 }
 
 .services div p,
 .service-cards,
-.cards {
-    padding: 1rem 0;
-}
-
+.cards,
 .icon {
-    width: 100%;
     padding: 1rem 0;
+    width: 100%;
 }
 
 .icon img {
@@ -190,12 +195,11 @@ h4 {
     margin: 0 auto;
 }
 
-.services p {
+.card p {
     font-size: .8rem;
 }
 
 .latest-articles {
-    text-align: center;
     background-color: var(--bg-grey);
 }
 
@@ -254,7 +258,6 @@ footer {
 footer>div {
     width: 70%;
     margin: 0 auto;
-    text-align: center;
 }
 
 .socials {
@@ -278,7 +281,6 @@ footer>div {
 
 #footer-nav li {
     list-style-type: none;
-    text-align: center;
     padding: .5rem;
     font-weight: 300;
 }
@@ -320,6 +322,103 @@ footer button {
     color: hsl(228, 59%, 28%);
 }
 
+
+@media screen and (min-width: 767px) and (max-width: 1000px) {
+    #main-nav {
+        height: 640px;
+        padding: 2rem 3rem;
+    }
+
+    #main-nav li a {
+        padding: 1rem;
+    }
+
+    .overview,
+    .services,
+    .latest-articles,
+    footer {
+        width: 100%;
+        padding: 7% 10%;
+        text-align: center;
+    }
+
+    .overview {
+        padding-bottom: 7%;
+    }
+
+    .overview-image {
+        padding: 11rem 0;
+        background: url(../images/image-mockups.png) 50% 40% / 88% no-repeat, url(../images/bg-intro-mobile.svg) center / cover no-repeat;
+    }
+
+    .overview button,
+    footer button {
+        width: 200px;
+    }
+
+    .summary {
+        margin-top: 22rem;
+    }
+
+    .service-cards,
+    .all-articles {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        column-gap: 2rem;
+    }
+
+    .icon img {
+        width: 20%;
+    }
+
+    footer>div {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 2fr 2fr;
+        grid-template-areas:
+            "logo     footer-nav button"
+            ".        footer-nav ."
+            "socials  footer-nav copyright";
+        column-gap: 5%;
+        text-align: left;
+    }
+
+    .logo {
+        grid-area: logo;
+    }
+
+    .socials {
+        grid-area: socials;
+        padding: 0;
+    }
+
+    #footer-nav {
+        grid-area: footer-nav;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 1rem;
+    }
+
+    #footer-nav li {
+        padding: 0;
+    }
+
+    footer button {
+        grid-area: button;
+        width: 8rem;
+        margin: 0 0 1rem auto;
+    }
+
+    footer button:focus {
+        box-shadow: 0 4px 7.5px hsla(231, 11%, 87%);
+    }
+
+    .copyright {
+        grid-area: copyright;
+        justify-self: end;
+    }
+}
+
 @media screen and (min-width: 1000px) {
     nav {
         width: 85%;
@@ -343,7 +442,6 @@ footer button {
     #main-nav li:first-of-type,
     #main-nav li:last-of-type {
         padding: 0;
-        padding-bottom: 0;
     }
 
     #main-nav li {
@@ -363,7 +461,7 @@ footer button {
         color: var(--clr-primary);
     }
 
-    .nav-btn {
+    .menu-btn {
         display: none;
     }
 
@@ -377,7 +475,6 @@ footer button {
     .services,
     .latest-articles,
     footer {
-        width: 100%;
         padding: 5% 10%;
         text-align: left;
     }
@@ -399,7 +496,6 @@ footer button {
     .summary {
         margin-top: 8.8rem;
         width: 43%;
-        text-align: left;
     }
 
     .summary h1 {
@@ -407,7 +503,6 @@ footer button {
     }
 
     .summary p {
-        text-align: left;
         font-size: 1rem;
     }
 
@@ -424,14 +519,15 @@ footer button {
         width: 60%;
     }
 
-    .services h2, 
+    .services h2,
     .latest-articles h2 {
         font-size: 2.5rem;
     }
 
-    .service-cards {
+    .service-cards,
+    .all-articles {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
         gap: 1.5rem;
     }
 
@@ -446,12 +542,6 @@ footer button {
 
     .latest-articles h2 {
         padding-top: 1rem;
-    }
-
-    .all-articles {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1.5rem;
     }
 
     .headline {
@@ -492,11 +582,10 @@ footer button {
         grid-area: footer-nav;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 1rem 5rem;
+        gap: 1rem 3rem;
     }
 
     #footer-nav li {
-        text-align: left;
         padding: 0;
     }
 
@@ -526,7 +615,37 @@ footer button {
         grid-area: copyright;
         text-align: right;
     }
+}
 
+@media screen and (min-width: 1000px) and (max-width: 1200px) {
 
+    .overview,
+    .services,
+    .latest-articles,
+    footer {
+        padding: 5%;
+    }
 
+    .overview {
+        padding-bottom: 5rem;
+    }
+
+    .summary {
+        width: 50%;
+        margin-top: 4rem;
+    }
+
+    .service-cards,
+    .all-articles {
+        display: grid;
+        gap: 1rem;
+    }
+
+    footer>div {
+        column-gap: 2rem;
+    }
+
+    footer button {
+        width: 75%;
+    }
 }
